--- a/img.html
+++ b/img.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="img.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <center>
-    <div><h1>FULL STACK DEVELOPMENT</h1></div>
+    <div class="fsd"><h1>FULL STACK DEVELOPMENT</h1></div>
+    <p id="name">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, sint repellendus qui, a mollitia, minus modi optio aspernatur tempora exercitationem eius numquam voluptate! Laborum ex, molestiae iure odio itaque libero.</p>
     <div>
         <img src="fsd.png" alt="FSD IMG" width="250" height="250"><br>
         <img src="fsd2.jpg" alt="2nd FSD IMG" style="height: 250px;width: 250px;">
     </div>
-    </center>
 </body>
 </html>
