js functions added

--- a/java_example.html
+++ b/java_example.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <button onclick="alert('Welcome to java script')">Java Script</button>
+    <br>
+    <button id="btn" style="align-items: center;background-color: aqua;color:black">Instagram</button>
     <script src="./script.js"></script>
+    
 
     <h2>JavaScript Variables</h2>
 <p id="demo"></p>
