--- a/java_example.html
+++ b/java_example.html
@@ -9,6 +9,8 @@
     <button onclick="alert('Welcome to java script')">Java Script</button>
     <br>
     <button id="btn" style="align-items: center;background-color: aqua;color:black">Instagram</button>
+    <br>
+    <button class="yt" style=" background-color: red; color: white;">Youtube</button>
     <script src="./script.js"></script>
     
 
